Fix jump to after element

--- a/components/TableOfContents/TableOfContents.module.scss
+++ b/components/TableOfContents/TableOfContents.module.scss
@@ -125,6 +125,7 @@
       left: 0;
       transform: translateY(-100%);
       background: linear-gradient(transparent, $sky-lighter);
+      pointer-events: none;
     }
   }
 }
